deployment/production-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freenet-org-east1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freenet-org-prod
  template:
    metadata:
      labels:
        app: freenet-org-prod
    spec:
      containers:
        - name: freenet-org-prod-app
          image: us-east1-docker.pkg.dev/freenet-353920/freenet-repo/freenet-org-production
          ports:
            - containerPort: 8080
      serviceAccountName: google-service-acct
