deployment/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "reservations-static-ip"
spec:
  defaultBackend:
    service:
      name: reservations
      port:
        number:
          8080
